# hotc-il2cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-cross.sh  build.bat  docker-compose.yml  run_tests.bat  run_tests.sh
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark.h  benchmark_suite.cpp  benchmark_suite.h  main.cpp
cmake/: android.toolchain.cmake  ios.toolchain.cmake  webgl.toolchain.cmake
docs/: COMPARISON.md  GAP_ANALYSIS.md  index.html
docs/site/: benchmarks.html  index.html
src/: CMakeLists.txt  platform.h
src/bridge/: unity_bridge.cpp  unity_bridge.h
src/bridge/core_module/: component.cpp  gameobject.cpp  transform.cpp
src/core/: bridge.h  complete_interpreter.cpp  complete_interpreter.h  exception_handling.cpp  exception_handling.h  generic_sharing.cpp  generic_sharing.h  hp_interpreter.cpp  hp_interpreter.h  hp_memory.h  il2cpp_metadata.cpp  il2cpp_metadata.h  il_parser.cpp  il_parser.h  interpreter.cpp  interpreter.h  jit_compiler.cpp  jit_compiler.h  memory.cpp  memory.h  metadata.h  method_bridge.cpp  method_bridge.h  runtime.h  threaded.cpp  threaded.h  type_system.cpp  type_system.h
src/utils/: il_reader.cpp  il_reader.h  logger.cpp  logger.h
tests/: CMakeLists.txt  test_complete.cpp  test_integration.cpp  test_interpreter.cpp  test_memory.cpp  test_type_system.cpp
